--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
                     </div>
                 </div>
 
+                <!--Spinner-->
+                <div class="spinner">
+                    <div class="rect1"></div>
+                    <div class="rect2"></div>
+                    <div class="rect3"></div>
+                    <div class="rect4"></div>
+                    <div class="rect5"></div>
+                </div>
+
                 <!--En este div se almacenará la info de la cotización-->
                 <div id="resultado" class="display"></div>
 
@@ -54,5 +63,7 @@
             </form>
         </section>
     </main>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
